# swos-port

./: .gitattributes  .gitignore  README.md  backup.sh  meson.build
ida2asm/: meson.build
ida2asm/gen-lookup/: gen-lookup.py  meson.build
ida2asm/src/: AmigaRegs.h  AsmConverter.cpp  AsmConverter.h  AsmConverterWorker.cpp  AsmConverterWorker.h  DefinesMap.cpp  DefinesMap.h  IdaAsmParser.cpp  IdaAsmParser.h  InputConverter.cpp  InputConverter.h  InputConverterWorker.cpp  InputConverterWorker.h  References.cpp  References.h  Struct.cpp  Struct.h  SymbolFileParser.cpp  SymbolFileParser.h  Tokenizer.cpp  Tokenizer.h  main.cpp  stdinc.h
ida2asm/src/InputSymbols/: ProcHookList.cpp  ProcHookList.h  SymbolAction.h  SymbolFileParser.cpp  SymbolFileParser.h  SymbolTable.cpp  SymbolTable.h
ida2asm/src/OutputItem/: DataItem.cpp  DataItem.h  Directive.cpp  Directive.h  EndProc.cpp  EndProc.h  Instruction.cpp  Instruction.h  Label.cpp  OutputItem.cpp  OutputItem.h  Proc.cpp  Proc.h  Segment.cpp  Segment.h  StackVariable.cpp  StackVariable.h
ida2asm/src/OutputWriter/: COutput.cpp  COutput.h  MasmOutput.cpp  MasmOutput.h  OutputFactory.cpp  OutputFactory.h  OutputWriter.cpp  OutputWriter.h  OutputWriterTemplates.h  VerbatimOutput.cpp  VerbatimOutput.h
ida2asm/src/Parser/: IdaAsmParser.cpp  IdaAsmParser.h
ida2asm/src/Util/: BlockList.h  DynaArray.cpp  DynaArray.h  Iterator.h  PascalString.h  StringList.cpp  StringList.h  StringMap.h  StringSet.cpp  StringSet.h  StringView.cpp  StringView.h  Util.cpp  Util.h
mnu2h/: CodeGenerator.py  Constants.py  Entry.py  Menu.py  Parser.py  PreprocExpression.py  Preprocessor.py  StringTable.py  Token.py  Tokenizer.py  Util.py  Variable.py  VariableStorage.py  l.bat  meson.build  mnu2h.py  t.bat
mnu2h/Parser/: Common.py  EntryParser.py  ExpressionParser.py  MenuParser.py  Parser.py
mnu2h/Preprocessor/: ExpressionEvaluator.py  ExpressionHandler.py  ExpressionParser.py  OperandNode.py  Operator.py  OperatorNode.py  Preprocessor.py
mnu2h/tests/: TestCodeGenerator.py  TestHelper.py  TestParser.py  TestPreprocessor.py  TestTokenizer.py  TestUtil.py
src/: assert.h  audio.cpp  controls.cpp  crash.cpp  file.cpp  file.h  game.cpp  init.cpp  log.cpp  main.cpp  menu.cpp  meson.build  music.cpp  options.cpp  options.h  pitch.cpp  render.cpp  render.h  stdinc.h  swos.h  swossym.h  util.cpp  util.h
src/android/: pch.h
src/audio/: SampleTable.cpp  SampleTable.h  SoundSample.cpp  SoundSample.h  audio.cpp  audio.h  chants.cpp  chants.h  comments.cpp  comments.h  music.cpp  music.h  sfx.cpp  sfx.h  wavFormat.h
src/controls/: controlOptionsMenu.cpp  controls.cpp  controls.h  gameControlEvents.cpp  gameControlEvents.h  gameControls.cpp  gameControls.h  joypadConfigMenu.cpp  joypads.cpp  menuControls.cpp  menuControls.h  quickConfigMenu.cpp  quickConfigMenu.h  scanCodes.cpp  scanCodes.h  selectGameControlEventsMenu.cpp  selectGameControlEventsMenu.h  selectMatchControls.cpp  selectMatchControls.h  testControlsMenu.cpp  testControlsMenu.h
src/controls/joypads/: Joypad.cpp  Joypad.h  JoypadConfig.cpp  JoypadConfig.h  JoypadConfigRegister.cpp  JoypadConfigRegister.h  JoypadElementValue.cpp  JoypadElementValue.h  JoypadGuidConfig.cpp  JoypadGuidConfig.h  SdlMappingParser.cpp  SdlMappingParser.h  VirtualJoypad.cpp  VirtualJoypad.h  joypads.cpp  joypads.h
src/controls/keyboard/: KeyConfig.cpp  KeyConfig.h  keyBuffer.cpp  keyBuffer.h  keyboard.cpp  keyboard.h  scancodes.cpp  (+7 more)
src/debug/: dump.cpp  dump.h
src/files/: file.cpp  file.h  selectFilesMenu.cpp  selectFilesMenu.h
src/game/: amigaMode.cpp  amigaMode.h  camera.cpp  camera.h  color.cpp  color.h  darkRectangle.cpp  darkRectangle.h  game.cpp  game.h  gameLoop.cpp  gameLoop.h  gameTime.cpp  gameTime.h  pitch.cpp  pitch.h  player.cpp  player.h  playerNameDisplay.cpp  playerNameDisplay.h  referee.cpp  referee.h  replayExitMenu.cpp  replayExitMenu.h  result.cpp  result.h  spinningLogo.cpp  stats.cpp  stats.h  team.cpp  team.h  updateBall.cpp  updateGoals.cpp  updateSprite.cpp  updateSprite.h  versusAndStadiumMenus.h
src/menus/: audioOptions.mnu  common.mh  continueAbortMenu.cpp  continueAbortMenu.h  continueMenu.cpp  continueMenu.h  controlOptions.mnu  drawMenu.cpp  drawMenu.h  joypadConfig.mnu  main.mnu  mainMenu.cpp  mainMenu.h  menu.cpp  menu.h  menuCodes.h  menuItemRenderer.cpp  menuMouse.cpp  menuMouse.h  menuProc.cpp  menus.cpp  menus.h  meson.build  mnu2h.py  options.mnu  quit.mnu  replayExit.mnu  replays.mnu  selectFiles.mnu  stadiumMenu.cpp  stadiumMenu.h  unpackMenu.cpp  versusMenu.cpp  versusMenu.h  videoOptions.mnu
src/options/: options.cpp  options.h  optionsMenu.cpp
src/replays/: LegacyReplayConverter.cpp  LegacyReplayConverter.h  ReplayData.cpp  ReplayData.h  ReplayDataStorage.cpp  ReplayDataStorage.h  hilFile.h  replayOptions.cpp  replayOptions.h  replays.cpp  replays.h  replaysMenu.cpp  replaysMenu.h
src/sprites/: PackedSprite.h  Sprite.h  colorizeSprites.cpp  colorizeSprites.h  gameSprites.cpp  gameSprites.h  loadTexture.cpp  renderSprites.cpp  renderSprites.h  spinningLogo.cpp  spinningLogo.h  sprites.cpp  sprites.h  updateSprite.cpp  updateSprite.h
src/substitutes/: substitutes.cpp
src/swos/: SwosPointer.h  swos.h
src/text/: text.cpp  text.h  textInput.cpp  textInput.h
src/util/: FixedPoint.h  fetch.h  flags.h  hash.cpp  hash.h  random.cpp  random.h  util.cpp  util.h  zip.cpp  zip.h
src/video/: assetManager.cpp  overlay.cpp  overlay.h  render.cpp  render.h  sprites.cpp  sprites.h  timer.cpp  timer.h  videoOptionsMenu.cpp  videoOptionsMenu.h  windowManager.cpp  windowManager.h  windowModeMenu.cpp  windowModeMenu.h
swos/: .gitattributes  meson.build  symbols.txt
tests/: meson.build
tests/data/: canada.diy  playa-10090613.RGD  playa-10095214.RGD  playa-10144556.RGD  zkz-10140228.RGD  zkz-10173518.RGD  zkz-10174427.RGD  zkz-10190651.RGD  zkz-11021807.RGD  zkz-11054632.RGD  zkz-11122841.RGD  zkz-11215003.RGD
tests/sdl-address-table-fetcher/: meson.build
tests/src/: main.cpp  sdlProcs.cpp  sdlProcs.h
tests/vc-proj/: tests.sln  tests.vcxproj  tests.vcxproj.filters
(+259 files in other folders)
